Added new project(restaurant local storage)

--- a/index.html
+++ b/index.html
@@ -199,6 +199,18 @@
                                             <i class="fa-solid fa-link"></i> </a>
                                     </div>
                                 </div>
+                                <div class="col-lg-12 col-md-12 col-sm-12 portfolio-item d-flex mt-4">
+                                    <img class="img-fluid" src="project imgs/restaurant local.png"Restaurant web thumbnail">
+                                    <div class="portfolio-info px-3 mt-3">
+                                        <h5>Restaurant Website Using Local Storage</h5>
+                                        <h6><span style="background-color: orange;">HTML</span><span class="px-2"
+                                                style="background-color: rebeccapurple;">CSS</span><span class="px-3"
+                                                style="background-color: rgb(255, 230, 0); background-color:rgb(9, 60, 226);color: white;">JS</span>
+                                        </h6>
+                                        <a href="https://dazzling-churros-7509c5.netlify.app/"
+                                            <i class="fa-solid fa-link"></i> </a>
+                                    </div>
+                                </div>
                                 <!-- Portfolio Item 2 -->
 
                                 <!-- Portfolio Item 3 -->
@@ -274,7 +286,7 @@
                                     class="fab fa-github fa-2x"></i></a>
                             <a href="https://www.linkedin.com/in/mirza-arij-baig-32839b2b4/" target="_blank"><i
                                     class="fab fa-linkedin fa-2x"></i></a>
-                            <a href="https://www.linkedin.com/in/mirza-arij-baig-32839b2b4/" target="_blank"><i class="fa-solid fa-file"></i> CV</a>
+             
                             
 
                         </div>
