--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                                                 style="background-color: rebeccapurple;">CSS</span><span class="px-3"
                                                 style="background-color: rgb(255, 230, 0); background-color:rgb(9, 60, 226);color: white;">JS</span>
                                         </h6>
-                                        <a href="https://dazzling-churros-7509c5.netlify.app/"
+                                        <a href="saylani-foodpanda-clone.netlify.app"
                                             <i class="fa-solid fa-link"></i> </a>
                                     </div>
                                 </div>
